[workspace]
members = ["packages/*", "examples/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
homepage = "https://github.com/simon-bourne/rust-book"
repository = "https://github.com/simon-bourne/rust-book"

[workspace.dependencies]
rust-book = { version = "0.1.0", path = "packages/rust-book" }

itertools = "0.12.0"
mdbook = "0.4.36"
ra_ap_syntax = "0.0.187"
thiserror = "1.0.50"
xtask-base = { git = "https://github.com/simon-bourne/rust-xtask-base" }
